# Redactify

./: .gitignore  README.md  pyproject.toml
src/: cli.py  main.py  redactify.py
src/app_logging/: logger.py  threaded_file_handler.py
src/audio/: aligner.py  audio_io.py  basic_transcriber.py  censor.py  censor_beep.py  separator.py  transcriber.py
src/config/: audio_censor_config.py  video_censor_config.py
src/image/: face_detector.py  mask_blur.py
src/text/: pii_detector.py  threaded_file_writer.py
src/video/: censor.py  face_detector.py  video_io.py
